--- a/js/form_access/index.html
+++ b/js/form_access/index.html
@@ -35,6 +35,10 @@
     var formData = new FormData(document.querySelector('form'))
     document.log('formData: ', formData)
     console.log('formData: ', formData)
+    formData.append('custom_field_name', 'custom value')
+    formData.append('custom_field_name', 'custom value2')
+    formData.set('custom_field_name2', 'custom value')
+    formData.set('custom_field_name2', 'custom value2')
     formData.forEach(function(e, i, a) {
       document.log('i: ', i)
       console.log('i: ', i)
