--- a/js/string/string.html
+++ b/js/string/string.html
@@ -14,6 +14,11 @@
   var res = str.split(" ");
   document.log('res: ', res)
 
+  // Метод trim() удаляет пробельные символы с начала и конца строки.
+  document.log('> Метод trim() удаляет пробельные символы с начала и конца строки.'.green())
+  var orig = '   foo  ';
+  document.log(orig.trim()); // 'foo'
+
   // Заменить
   document.log('----------------------------------------')
   document.log('> Заменить'.green())
