--- a/js/regex/regex.html
+++ b/js/regex/regex.html
@@ -27,9 +27,9 @@
   //       символы начала и конца (^ и $) начинают работать по нескольким строкам.
   // 
 
-  console.log('"asdf".match(/s/gim): ', "asdf".match(/s/gim))
-  console.log('/s/gim.test("asd"): ', /s/gim.test("asd"))
-  console.log('/f/gim.test("asd"): ', /f/gim.test("asd"))
+  document.log('"asdf".match(/s/gim): ', "asdf".match(/s/gim))
+  document.log('/s/gim.test("asd"): ', /s/gim.test("asd"))
+  document.log('/f/gim.test("asd"): ', /f/gim.test("asd"))
   var versions = [
     '.',
     'a',
