--- a/js/string/string.html
+++ b/js/string/string.html
@@ -53,11 +53,13 @@
 
   // slice - возвращает новую строку извлекая часть строки.
   document.log('----------------------------------------')
-  document.log('> slice'.green())
+  document.log('> slice([begin[, end]]) (`кусочек`)'.green(), ' begin - индекс с которого начинаем выбирать, end - индекс с которого прекращаем выбирать (символ под индексом end не выбирается)')
   var a = '0123456789'
   var b = a.slice(2)
+  var c = a.slice(2, 5)
   document.log('a: ', a) // 0123456789
   document.log('b: ', b) // 23456789
+  document.log('c: ', c) // 234
 
   // Сгенерировать regex из стринги
   document.log('----------------------------------------')
