--- a/js/date/data.html
+++ b/js/date/data.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <script src="../_lib/lib.js"></script>
+  <script src="../_libs/lib.js"></script>
   <script type="text/javascript">
   "use strict"
   var timeInMs = Date.now()
