--- a/js/eval/eval.html
+++ b/js/eval/eval.html
@@ -7,7 +7,7 @@
 
 <body>
   <p ondblclick="eval(this.innerHTML)">alert('hi')</p>
-  <script src="../_lib/lib.js"></script>
+  <script src="../_libs/lib.js"></script>
 </body>
 
 </html>
