--- a/js/form_access/index.html
+++ b/js/form_access/index.html
@@ -17,7 +17,7 @@
         <option value="3" selected="">3</option>
       </select>
     </form>
-    <script type="text/javascript" src="../_lib/lib.js"></script>
+    <script type="text/javascript" src="../_libs/lib.js"></script>
     <script type="text/javascript" src="../../theme/bower/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript">
     var form = document.forms.my; // document.forms[0]
