--- a/js/get_element/get_element.html
+++ b/js/get_element/get_element.html
@@ -7,7 +7,7 @@
 
 <body>
   <div id="e1"><span name="age" class="square red"></span></div>
-  <script type="text/javascript" src="../_lib/lib.js"></script>
+  <script type="text/javascript" src="../_libs/lib.js"></script>
   <script type="text/javascript">
     document.log('> По id'.green())
     document.log('> window.e1'.blue())
