--- a/js/hash/hash.html
+++ b/js/hash/hash.html
@@ -7,7 +7,7 @@
 
 <body>
   <h1>js hash</h1>
-  <script src="../_lib/lib.js"></script>
+  <script src="../_libs/lib.js"></script>
   <script type="text/javascript">
     document.log('Простой доступ к данным'.green())
     document.log('a = {a:1}: ', a = {a: 1 })
