--- a/js/string/string.html
+++ b/js/string/string.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <script src="../_lib/lib.js"></script>
+  <script src="../_libs/lib.js"></script>
   <script type="text/javascript">
   // Разбить в массив
   document.log('> Разбить в массив'.green())
