--- a/css/_doc/index.html
+++ b/css/_doc/index.html
@@ -1,11 +1,8 @@
-<h1>Справочник CSS</h1>
-
 <h2>Свойства</h2>
 <ul>
   <li><a title="Повышает приоритет стиля">!important</a></li>
 </ul>
 
-<h2>A</h2>
 <ul>
   <li><a title="Выравнивает строки внутри флекс-контейнера при наличии свободного пространства по поперечной оси">align-content</a></li>
   <li><a title="Выравнивает флекс-элементы внутри контейнера в перпендикулярном направлении">align-items</a></li>
@@ -22,7 +19,6 @@
   <li><a title="Устанавливает, по какой зависимости должна происходить анимация каждого цикла">animation-timing-function</a></li>
 </ul>
 
-<h2>B</h2>
 
 <ul>
   <li><a title="Определяет, показывать обратную сторону элемента или нет при его трансформации в трёхмерном пространстве">backface-visibility</a></li>
@@ -69,9 +65,8 @@
   <li><a title="Добавляет тень к элементу">box-shadow</a></li>
   <li><a title="Применяется для изменения алгоритма расчёта ширины и высоты элемента">box-sizing</a></li>
 </ul>
-<h2>C</h2>
 <ul>
-  <li><a title="Определяет положение заголовка таблицы, который задаётся с помощью элемента<caption>">caption-side</a></li>
+  <li><a title="Определяет положение заголовка таблицы, который задаётся с помощью элемента <caption>">caption-side</a></li>
   <li><a title="Устанавливает, с какой стороны элемента запрещено его обтекание другими элементами">clear</a></li>
   <li><a title="Определяет область позиционированного элемента, в которой будет показано его содержимое">clip</a></li>
   <li><a title="Определяет цвет текста элемента">color</a></li>
@@ -90,13 +85,11 @@
   <li><a title="Устанавливает идентификатор, в котором будет храниться счетчик отображений определенного элемента, а также начальное значение счетчика">counter-reset</a></li>
   <li><a title="Устанавливает форму курсора, когда он находится в пределах элемента">cursor</a></li>
 </ul>
-<h2>D, E</h2>
 <ul>
   <li><a title="Свойство предназначено для сайтов, в которых имеет значение направление текста">direction</a></li>
   <li><a title="Многоцелевое свойство, которое определяет, как элемент должен быть показан в документе">display</a></li>
   <li><a title="Задаёт отображение границ и фона в ячейке таблицы, если она пустая">empty-cells</a></li>
 </ul>
-<h2>F</h2>
 <ul>
   <li><a title="Используется для добавления художественных эффектов к элементам, обычно к изображениям">filter</a></li>
   <li><a title="Сокращённое свойство, которое позволяет указать параметры элемента, чтобы он эффективно заполнял доступное пространство">flex</a></li>
@@ -116,14 +109,12 @@
   <li><a title="Определяет, как нужно представлять строчные буквы — оставить их без модификаций или делать их все прописными уменьшенного размера">font-variant</a></li>
   <li><a title="Устанавливает насыщенность шрифта">font-weight</a></li>
 </ul>
-<h2>H, I, J</h2>
 <ul>
   <li><a title="Устанавливает высоту элементов">height</a></li>
   <li><a title="Сообщает браузеру, как расставлять переносы слов в блоке текста">hyphens</a></li>
   <li><a title="Сообщает браузеру, каким алгоритмом интерполировать изображение при масштабировании его размеров или изменении масштаба в параметрах браузера">image-rendering</a></li>
   <li><a title="Определяет, как браузер распределяет пространство вокруг флекс-элементов вдоль главной оси контейнера">justify-content</a></li>
 </ul>
-<h2>L</h2>
 <ul>
   <li><a title="Устанавливает положение левого края элемента">left</a></li>
   <li><a title="Определяет интервал между букв в тексте">letter-spacing</a></li>
@@ -133,7 +124,6 @@
   <li><a title="Определяет, как будет размещаться маркер относительно текста">list-style-position</a></li>
   <li><a title="Изменяет вид маркера для каждого элемента списка">list-style-type</a></li>
 </ul>
-<h2>M</h2>
 <ul>
   <li><a title="Устанавливает величину отступа от каждого края элемента">margin</a></li>
   <li><a title="Устанавливает величину отступа от нижнего края элемента">margin-bottom</a></li>
@@ -145,7 +135,6 @@
   <li><a title="Задает минимальную высоту элемента">min-height</a></li>
   <li><a title="Устанавливает минимальную ширину элемента">min-width</a></li>
 </ul>
-<h2>O</h2>
 <ul>
   <li><a title="Управляет соотношением сторон изображений и видеороликов, а также способом их масштабирования">object-fit</a></li>
   <li><a title="Определяет уровень прозрачности элемента">opacity</a></li>
@@ -160,7 +149,6 @@
   <li><a title="Управляет отображением содержимого блочного элемента по горизонтали">overflow-x</a></li>
   <li><a title="Управляет отображением содержимого блочного элемента по вертикали.">overflow-y</a></li>
 </ul>
-<h2>P</h2>
 <ul>
   <li><a title="Устанавливает значение полей вокруг содержимого элемента">padding</a></li>
   <li><a title="Устанавливает значение поля от нижнего края содержимого элемента">padding-bottom</a></li>
@@ -175,13 +163,11 @@
   <li><a title="Свойство pointer-events позволяет управлять тем, как элементы будут реагировать на события мыши или прикосновения к сенсорному экрану">pointer-events</a></li>
   <li><a title="Устанавливает способ позиционирования элемента относительно окна браузера или других объектов на веб-странице">position</a></li>
 </ul>
-<h2>Q, R</h2>
 <ul>
   <li><a title="Устанавливает тип кавычек, который применяется в тексте документа">quotes</a></li>
   <li><a title="Указывает, можно ли пользователю изменять размеры текстового поля">resize</a></li>
   <li><a title="Устанавливает положение правого края элемента">right</a></li>
 </ul>
-<h2>T</h2>
 <ul>
   <li><a title="Используется для изменения ширины отступа, заданного с помощью символа табуляции">tab-size</a></li>
   <li><a title="Определяет, как браузер должен вычислять ширину ячеек таблицы, основываясь на её содержимом">table-layout</a></li>
@@ -205,14 +191,12 @@
   <li><a title="Устанавливает имя стилевого свойства, значение которого будет отслеживаться для создания эффекта перехода">transition-property</a></li>
   <li><a title="Устанавливает, насколько быстро должно изменяться значение стилевого свойство для которого применяется эффект перехода">transition-timing-function</a></li>
 </ul>
-<h2>U, V</h2>
 <ul>
   <li><a title="Задаёт, как должен располагаться текст">unicode-bidi</a></li>
   <li><a title="Управляет поведением выделения текста и других элементов на странице">user-select</a></li>
   <li><a title="Выравнивает элемент по вертикали относительно своего родителя, окружающего текста или ячейки таблицы">vertical-align</a></li>
   <li><a title="Предназначен для отображения или скрытия элемента">visibility</a></li>
 </ul>
-<h2>W</h2>
 <ul>
   <li><a title="Устанавливает, как отображать пробелы между словами">white-space</a></li>
   <li><a title="Задаёт минимальное число строк текста, которое располагается на следующей странице при печати документа">widows</a></li>
@@ -222,7 +206,6 @@
   <li><a title="Указывает, переносить или нет длинные слова, которые не помещаются по ширине в заданную область">word-wrap</a></li>
   <li><a title="Устанавливает направление текста на странице">writing-mode</a></li>
 </ul>
-<h2>Z</h2>
 <ul>
   <li><a title="Задаёт положение элементов по z-оси">z-index</a></li>
   <li><a title="Изменяет масштаб объекта согласно заданному значению">zoom</a></li>
@@ -259,8 +242,19 @@
   <li><a>[attr|='value']</a></li>
 </ul>
 <h2>Псевдоклассы</h2>
+<h3>На основе состояния</h3>
 <ul>
-  <li><a title="Определяет стиль активного элемента">:active</a></li>
+  <li><a href="Псевдоклассы/На основе состояния.html#" title="Определяет стиль активного элемента">:active</a></li>
+  <li><a title="Применяется к ссылкам, уже посещённым пользователем, и задаёт для них стилевое оформление">:visited</a></li>
+</ul>
+<h3>На основе нумерации</h3>
+<ul>
+  <li><a title="Используется для добавления стиля к элементам на основе нумерации в дереве элементов">:nth-child</a></li>
+  <li><a title="Используется для добавления стиля к элементам на основе нумерации в дереве элементов.">:nth-last-child</a></li>
+  <li><a title="Используется для добавления стиля к элементам указанного типа на основе нумерации в дереве элементов.">:nth-last-of-type</a></li>
+  <li><a title="Используется для добавления стиля к элементам указанного типа на основе нумерации в дереве элементов">:nth-of-type</a></li>
+</ul>
+<ul>
   <li><a title="Применяется к элементам интерфейса, таким как переключатели (checkbox) и флажки (radio), когда они находятся в положение «включено»">:checked</a></li>
   <li><a title="Применяет стиль к элементам форм, которые установлены по умолчанию в группе похожих элементов">:default</a></li>
   <li><a title="Применяет стиль к заблокированным элементам форм">:disabled</a></li>
@@ -279,10 +273,6 @@
   <li><a title="Задаёт правила стилей для последнего элемента определённого типа">:last-of-type</a></li>
   <li><a title="Применяется к ссылкам, которые ещё не посещались пользователем">:link</a></li>
   <li><a title="Задаёт правила стилей для элементов, которые не содержат указанный селектор">:not</a></li>
-  <li><a title="Используется для добавления стиля к элементам на основе нумерации в дереве элементов">:nth-child</a></li>
-  <li><a title="Используется для добавления стиля к элементам на основе нумерации в дереве элементов.">:nth-last-child</a></li>
-  <li><a title="Используется для добавления стиля к элементам указанного типа на основе нумерации в дереве элементов.">:nth-last-of-type</a></li>
-  <li><a title="Используется для добавления стиля к элементам указанного типа на основе нумерации в дереве элементов">:nth-of-type</a></li>
   <li><a title="Применяется к дочерним элементам, только если он единственный у родителя">:only-child</a></li>
   <li><a title="Применяется к дочерним элементам указанного типа, только если он единственный у родителя">:only-of-type</a></li>
   <li><a title="Применяет стилевые правила к полю формы, у которого не задан атрибут required">:optional</a></li>
@@ -293,7 +283,6 @@
   <li><a title="Определяет корневой элемент документа">:root</a></li>
   <li><a title="Применяется к целевому элементу, иными словами, к идентификатору, который указан в адресной строке браузера">:target</a></li>
   <li><a title="Применяется к полям формы, содержимое которых проходит проверку в браузере на соответствие указанному типу">:valid</a></li>
-  <li><a title="Применяется к ссылкам, уже посещённым пользователем, и задаёт для них стилевое оформление">:visited</a></li>
 </ul>
 <h2>Псевдоэлементы</h2>
 <ul>
