--- a/js/array/array.html
+++ b/js/array/array.html
@@ -153,6 +153,68 @@
   document.log('> Массив содержит в себе хотя бы один элемент другого массива'.green())
   document.log([1, 2, 3].some(id => [4, 5, 6, 2].includes(id)))
   document.log([1, 2, 3].some(id => [4, 5, 6, 2].indexOf(id) >= 0))
+
+  document.log()
+  document.log('> Перебор nested массива'.green())
+  a = [
+    {id: '1'},
+    {id: '2', children:
+      [
+        {id: '3'},
+        {id: '4'}
+      ]
+    },
+    {
+      id: '5', children:
+      [
+        {id: '6', children:
+          [
+            {id: '7'}
+          ]
+        }
+      ]
+    },
+    {
+      id: '8', children:
+      [
+        {id: '9'}
+      ]
+    }
+  ]
+
+  document.log('a: ', a)
+
+  var level = 0
+  var cache = []
+  cache[level] = a.clone()
+  cache[level].reset()
+  var parent = []
+  parent[level] = null
+
+  while (level>=0) {
+    var node = cache[level].next()
+    if (node != null) {
+
+      document.log('node.id: ', node.id)
+      document.log('parent: ', parent)
+
+      if (
+        node['children'] != null &&
+        Object.prototype.toString.call(node['children']) === '[object Array]' &&
+        node['children'].length
+      ) {
+        level++
+        parent[level] = Object.assign({}, node)
+        delete parent[level]['children']
+        cache[level] = node['children'].clone()
+        cache[level].reset()
+      }
+    } else {
+      parent[level] = null
+      level--
+    }
+  }
+
   </script>
 </body>
 
